--- a/index.html
+++ b/index.html
@@ -142,9 +142,11 @@
     <div class="line"></div>
     <div class="Copyright">
     <p>Copyright | PaulaGarcia</p>
-    <img src="images/Instagram.png" alt="">
-    <img src="images/Facebook.png" alt="">
-    <img src="images/Twitter copy.png" alt="">
+    <div class="copy">
+    <img src="images/instagram.webp" alt="">
+    <img src="images/facebook.webp" alt="">
+    <img src="images/twitter.webp" alt="">
+    </div>
 </div>
     </footer>
 </body>
